--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 我的博客
 subtitle:
 description:
 keywords: 博客 前端 web node 后端 IT
-author: John Doe
+author: huangkuiwei
 language: zh-CN
 timezone:
 
