--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 我的博客
-subtitle:
-description:
+title: 影火の记忆的博客
+subtitle: 有思念你的人在的地方，就是你的归处
+description: 小码农的大世界
 keywords: 博客 前端 web node 后端 IT
 author: huangkuiwei
 language: zh-CN
