--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://www.justplay.work
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -81,3 +81,4 @@ deploy:
   type: git
   repo: git@github.com:huangkuiwei/huangkuiwei.github.io.git
   branch: master
+  Plugins: - hexo-generator-cname
