--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 影火の记忆的博客
+title: 影火の记忆
 subtitle: 有思念你的人在的地方，就是你的归处
 description: 小码农的大世界
 keywords: 博客 前端 web node 后端 IT
